proc-macros/tests/ui/incorrect/sub/sub_no_name.stderr
error: unexpected end of input, `#[subscription]` is missing `name` argument
 --> $DIR/sub_no_name.rs:6:2
  |
6 |     #[subscription(item = String)]
  |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
